--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=ecommerce-api
 server.servlet.context-path=/
 
 #database
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/FashionStoreDb
-spring.datasource.username=root
-spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
+spring.datasource.username=kell
+spring.datasource.password=dskell0502
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
@@ -22,3 +22,4 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 #Security
 security.jwt.key = ecommerce-api
 security.jwt.expiration = 86400000
+#tempalte
