--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definiti
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
+#show sql to test
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 #Security
 security.jwt.key = ecommerce-api
 security.jwt.expiration = 86400000
