--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 #Security
 security.jwt.key = ecommerce-api
 security.jwt.expiration = 86400000
+
+#file config
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
