--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
 			<version>2.9.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.15</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
