Update config heroku database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,16 @@ spring.application.name=ecommerce-api
 server.servlet.context-path=/
 
 #database
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/FashionStoreDb
-#spring.datasource.username=root
-#spring.datasource.password=1234567
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/FashionStoreDb
+spring.datasource.username=root
+spring.datasource.password=1234567
 
 #heroku
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_40058f24bab33de
-spring.datasource.username=bcbc836c343e2e
-spring.datasource.password=dfa3943f
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_40058f24bab33de
+#spring.datasource.username=bcbc836c343e2e
+#spring.datasource.password=dfa3943f
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
